// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 0 expense 1`] = `
<div
  className="content-container"
>
  <div
    className="summary"
  >
    <div
      className="summary__word"
    >
      <span
        className="summary--top"
      >
        Viewing
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        0
         
        Expenses
      </span>
    </div>
    <div
      className="summary__amount"
    >
      <span
        className="summary--top"
      >
        Total
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        $0.00
      </span>
    </div>
    <div
      className="summary__button"
    >
      <Link
        className="btn-add-expense btn-add-expense--cta"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div
  className="content-container"
>
  <div
    className="summary"
  >
    <div
      className="summary__word"
    >
      <span
        className="summary--top"
      >
        Viewing
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        1
         
        Expense
      </span>
    </div>
    <div
      className="summary__amount"
    >
      <span
        className="summary--top"
      >
        Total
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        $20.00
      </span>
    </div>
    <div
      className="summary__button"
    >
      <Link
        className="btn-add-expense btn-add-expense--cta"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="summary"
  >
    <div
      className="summary__word"
    >
      <span
        className="summary--top"
      >
        Viewing
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        41
         
        Expenses
      </span>
    </div>
    <div
      className="summary__amount"
    >
      <span
        className="summary--top"
      >
        Total
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        $8,713,877.47
      </span>
    </div>
    <div
      className="summary__button"
    >
      <Link
        className="btn-add-expense btn-add-expense--cta"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses and hidden expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="summary"
  >
    <div
      className="summary__word"
    >
      <span
        className="summary--top"
      >
        Viewing
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        17
         
        Expenses
      </span>
    </div>
    <div
      className="summary__amount"
    >
      <span
        className="summary--top"
      >
        Total
      </span>
      <br />
      <span
        className="summary--bottom"
      >
        $2,640.20
      </span>
    </div>
    <div
      className="summary__button"
    >
      <Link
        className="btn-add-expense btn-add-expense--cta"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
    <div
      className="summary__hidden"
    >
      <FontAwesomeIcon
        border={false}
        className="fa-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f06a",
              "M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z",
            ],
            "iconName": "exclamation-circle",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
      5
       
      expenses
       hidden due to filters.
    </div>
  </div>
</div>
`;
